Novo Blog, mudança para CGTECH

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ icones/settings_cell-24px.svg
 icones/laptop_windows-24px.svg
 icones/memory-24px.svg
 icones/phone_iphone-24px.svg
+git.code-workspace
