atualização para o flask

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-icones/games-24px.svg
-icones/home-24px.svg
-icones/settings_cell-24px.svg
-icones/laptop_windows-24px.svg
-icones/memory-24px.svg
-icones/phone_iphone-24px.svg
-git.code-workspace
+APP/models.py
+config.py
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+env/
+venv/
+*.sqlite3
+instance/
+.env
